[project]
name = "u2d2-driver"
version = "0.1.0"
description = "Simple velocity + position driver for ROBOTIS U2D2 + Dynamixel Protocol 2.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dynamixel-sdk>=3.7.31",
    "pyserial>=3.5",
]

[tool.uv]
# Declare deps here and run `uv sync`. Do not use `uv add`.

# The driver is a single module (u2d2_driver.py). A build backend lets the ROS2
# wrapper (ros2_wrapper/src/u2d2_driver_ros) depend on it as an editable path
# package and `import u2d2_driver`. Only relevant on the `ros` branch.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["u2d2_driver.py"]
