[project]
name = "u2d2_px4_ros"
version = "0.1.0"
description = "PX4 RC relay for u2d2_driver (maps /fmu/out/input_rc to a Dynamixel actuator)"
authors = [
  {name = "Atar Babgei", email = "atarbabgei@gmail.com"}
]
license = {text = "MIT"}
requires-python = "==3.10.*"
dependencies = []

[project.scripts]
u2d2_px4_node = "u2d2_px4_ros.u2d2_px4_node:main"

[tool.colcon-uv-ros]
name = "u2d2_px4_ros"

[tool.colcon-uv-ros.dependencies]
depend = ["rclpy", "std_msgs", "px4_msgs"]
test_depend = ["pytest"]

[tool.colcon-uv-ros.data-files]
"share/ament_index/resource_index/packages" = ["resource/u2d2_px4_ros"]
"share/u2d2_px4_ros" = ["package.xml", "launch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["u2d2_px4_ros"]
